<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/calculateCalories"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/calculate_calories"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/addProduct"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/add_product"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateCalories"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/myList"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:text="@string/my_list"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProduct"/>

</androidx.constraintlayout.widget.ConstraintLayout>