<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/name"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:padding="5dp"
            android:id="@+id/denomination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/denomanation"
            android:gravity="center"
            android:textSize="16sp" />

        <AutoCompleteTextView
            android:padding="5dp"
            android:id="@+id/autoCompleteDenomination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/product"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:padding="5dp"
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/weight"
                android:textSize="16sp" />

            <EditText
                android:padding="5dp"
                android:id="@+id/weightDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="6"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:padding="5dp"
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:gravity="center"
                android:textSize="16sp" />

            <Spinner
                android:padding="5dp"
                android:id="@+id/quantitySpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/quantity"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/addProduct"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/eatingForToday"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product"/>

    <TextView
        android:id="@+id/addAllReady"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAllReady"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addProduct"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAllReady"
        app:layout_constraintBottom_toTopOf="@id/calculateCalories"
        tools:listitem="@layout/recycler_view_dishes"/>

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="5dp"
        android:id="@+id/calculateCalories"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/calculate_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvProducts"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>